@@ -1,5 +1,12 @@
 2011-01-28  Murray Cumming  <murrayc@murrayc.com>
 
+	Fix make check.
+	
+	* demos/gtk-demo/example_stockbrowser.cc: Adapt for the previous commit
+	that changed IconSet to need RefPtr.
+
+2011-01-28  Murray Cumming  <murrayc@murrayc.com>
+
 	IconSet: Use this via a RefPtr.
 
 	* gtk/src/iconset.[h|cc]: Use this via RefPtr, because that is what the 
